<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_weight="5"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    >
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
	android:layout_weight="1"
	android:layout_width="match_parent"
	android:layout_height="0dp"
	>
    <Button
       android:text="@string/clear"
       android:onClick="clearTable"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="match_parent"/>
    <Button
       android:text="@string/backspace"
       android:onClick="deleteCard"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="match_parent"/>
  </LinearLayout>
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
	android:layout_weight="1"
	android:layout_width="match_parent"
	android:layout_height="0dp"
	>
    <Button
       android:text="@string/jack"
       android:id="@+id/jack"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:onClick="update"/>
    <Button
       android:text="@string/queen"
       android:id="@+id/queen"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:onClick="update"/>
    <Button
       android:text="@string/king"
       android:id="@+id/king"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:onClick="update"/>
    <Button
       android:text="@string/spades"
       android:id="@+id/spades"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:onClick="update"/>
  </LinearLayout>
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
	android:layout_weight="1"
	android:layout_width="match_parent"
	android:layout_height="0dp"
	>
    <Button
       android:text="@string/number_seven"
       android:id="@+id/num_seven"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:onClick="update"/>
    <Button
       android:text="@string/number_eight"
       android:id="@+id/num_eight"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:onClick="update"/>
    <Button
       android:text="@string/number_nine"
       android:id="@+id/num_nine"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:onClick="update"/>
    <Button
       android:text="@string/clubs"
       android:id="@+id/clubs"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:onClick="update"/>
  </LinearLayout>
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
	android:layout_weight="1"
	android:layout_width="match_parent"
	android:layout_height="0dp"
	>
    <Button
       android:text="@string/number_four"
       android:id="@+id/num_four"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:onClick="update"/>
    <Button
       android:text="@string/number_five"
       android:id="@+id/num_five"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:onClick="update"/>
    <Button
       android:text="@string/number_six"
       android:id="@+id/num_six"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:onClick="update"/>
    <Button
       android:text="@string/hearts"
       android:id="@+id/hearts"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:onClick="update"/>
  </LinearLayout>
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
	android:layout_weight="1"
	android:layout_width="match_parent"
	android:layout_height="0dp"
	>
    <Button
       android:text="@string/number_ten"
       android:id="@+id/num_ten"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:onClick="update"/>
    <Button
       android:text="@string/number_two"
       android:id="@+id/num_two"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:onClick="update"/>
    <Button
       android:text="@string/number_three"
       android:id="@+id/num_three"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:onClick="update"/>
    <Button
       android:text="@string/diamonds"
       android:id="@+id/diamonds"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:onClick="update"/>
  </LinearLayout>
</LinearLayout>
