<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
  <TextView
     android:text="@string/pair_chance"
     android:layout_weight="1"
     android:layout_width="match_parent"
     android:layout_height="0dp" />
  <TextView
     android:text="@string/pair_chance"
     android:layout_weight="1"
     android:layout_width="match_parent"
     android:layout_height="0dp" />
  <TextView
     android:text="@string/pair_chance"
     android:layout_weight="1"
     android:layout_width="match_parent"
     android:layout_height="0dp" />
  <TextView
     android:text="@string/pair_chance"
     android:layout_weight="1"
     android:layout_width="match_parent"
     android:layout_height="0dp" />
  <TextView
     android:text="@string/pair_chance"
     android:layout_weight="1"
     android:layout_width="match_parent"
     android:layout_height="0dp" />
  <TextView
     android:text="@string/pair_chance"
     android:layout_weight="1"
     android:layout_width="match_parent"
     android:layout_height="0dp" />
  <TextView
     android:text="@string/pair_chance"
     android:layout_weight="1"
     android:layout_width="match_parent"
     android:layout_height="0dp" />
  <TextView
     android:text="@string/pair_chance"
     android:layout_weight="1"
     android:layout_width="match_parent"
     android:layout_height="0dp" />
  <TextView
     android:text="@string/pair_chance"
     android:layout_weight="1"
     android:layout_width="match_parent"
     android:layout_height="0dp" />
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_weight="2"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     >
    <TextView
       android:text="@string/headsup_chance"
       android:layout_weight="1"
       android:layout_height="match_parent"
       android:layout_width="0dp" />
    <Button
       android:text="@string/done_string"
       android:layout_weight="1"
       android:layout_height="match_parent"
       android:layout_width="0dp" 
       android:onClick="returnToTable"/>
  </LinearLayout>
</LinearLayout>
